# ncwm

./: AUTHORS  BUGS  CONTRIB  COPYING  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  TODO  config.h.in  configure  configure.ac  ncwm.spec  ncwm.spec.in  version.h.in
examples/: statustext-deleuze.sh  statustext-gavin.sh  statustext.sh
examples/session-managers/: kdm-entry
man/: Makefile.am  Makefile.in  actions.conf.5  common.conf.5  ncwm.1  ncwmremote.1  session.conf.5  theme.conf.5
src/: Makefile.am  Makefile.in  action.cpp  action.h  actions.cpp  actions.h  atoms.cpp  atoms.h  bar.cpp  bar.h  binder.cpp  binder.h  box.cpp  box.h  client.cpp  client.h  clientbar.cpp  clientbar.h  container.h  cursors.cpp  cursors.h  draw.cpp  draw.h  expander.cpp  expander.h  float.cpp  float.h  font.cpp  font.h  frame.cpp  frame.h  inputbar.cpp  inputbar.h  kernel.cpp  kernel.h  label.cpp  label.h  launcher.cpp  launcher.h  loader.cpp  (+43 more)
